--- a/crystal_client_templates/api.mustache
+++ b/crystal_client_templates/api.mustache
@@ -191,22 +191,18 @@ module {{moduleName}}
       # http body (model)
       post_body = {{#bodyParam}}{{{paramName}}}.to_nason{{/bodyParam}}{{^bodyParam}}nil{{/bodyParam}}
 
-      # return_type
-      return_type = {{#returnType}}"{{{.}}}"{{/returnType}}{{^returnType}}nil{{/returnType}}
-
       # auth_names
       auth_names = {{#authMethods}}{{#-first}}[{{/-first}}"{{name}}"{{^-last}}, {{/-last}}{{#-last}}]{{/-last}}{{/authMethods}}{{^authMethods}}[] of String{{/authMethods}}
 
       @api_client.build_api_request(
-        :"{{httpMethod}}",
-        local_var_path,
-        "{{classname}}.{{operationId}}",
-        return_type,
-        post_body,
-        auth_names,
-        header_params,
-        query_params,
-        form_params
+        http_method: :"{{httpMethod}}",
+        path: local_var_path,
+        operation: "{{classname}}.{{operationId}}",
+        post_body: post_body,
+        auth_names: auth_names,
+        header_params: header_params,
+        query_params: query_params,
+        form_params: form_params
       )
     end
 {{/operation}}
