--- a/crystal_client_templates/api.mustache
+++ b/crystal_client_templates/api.mustache
@@ -20,7 +20,7 @@ module {{moduleName}}
     {{/notes}}
     {{#allParams}}
     {{#required}}
-    # @param {{paramName}} [{{{dataType}}}{{^required}}?{{/required}}] {{description}}
+    # @param {{paramName}} [{{{dataType}}}{{^required}}?{{/required}}]{{#description}} {{{description}}}{{/description}}
     {{/required}}
     {{/allParams}}
     # @return [{{{returnType}}}{{^returnType}}nil{{/returnType}}]
@@ -37,7 +37,7 @@ module {{moduleName}}
     {{/notes}}
     {{#allParams}}
     {{#required}}
-    # @param {{paramName}} [{{{dataType}}}{{^required}}?{{/required}}] {{description}}
+    # @param {{paramName}} [{{{dataType}}}{{^required}}?{{/required}}]{{#description}} {{{description}}}{{/description}}
     {{/required}}
     {{/allParams}}
     # @return [Array<({{{returnType}}}{{^returnType}}nil{{/returnType}}, Integer, Hash)>] {{#returnType}}{{{.}}} data{{/returnType}}{{^returnType}}nil{{/returnType}}, response status code and response headers
@@ -61,7 +61,7 @@ module {{moduleName}}
     {{/notes}}
     {{#allParams}}
     {{#required}}
-    # @param {{paramName}} [{{{dataType}}}{{^required}}?{{/required}}] {{description}}
+    # @param {{paramName}} [{{{dataType}}}{{^required}}?{{/required}}]{{#description}} {{{description}}}{{/description}}
     {{/required}}
     {{/allParams}}
     # @return nil
