--- a/crystal_client_templates/shard.mustache
+++ b/crystal_client_templates/shard.mustache
@@ -5,6 +5,8 @@ authors:
 description: |
   {{{shardDescription}}}
 crystal: ">= 1, < 2"
+license: {{{shardLicense}}}
+
 dependencies:
   crest:
     github: mamantoha/crest
@@ -19,5 +21,6 @@ development_dependencies:
     version: ~> 1.0
   ameba:
     github: crystal-ameba/ameba
-
-license: {{{shardLicense}}}
+  post_process:
+    github: cyangle/post_process
+    version: ~> 0.2.0
