--- a/crystal_client_templates/api.mustache
+++ b/crystal_client_templates/api.mustache
@@ -82,13 +82,20 @@ module {{moduleName}}
       {{^isNullable}}
       {{#required}}
       {{#isEnum}}
-      {{^isContainer}}
+      {{#collectionFormat}}
+      # verify enum value
+      allowable_values = [{{#allowableValues}}{{#enumVars}}{{{value}}}{{^-last}}, {{/-last}}{{/enumVars}}{{/allowableValues}}]
+      if @api_client.config.client_side_validation && !{{{paramName}}}.all? { |item| allowable_values.includes?(item) }
+        raise ArgumentError.new("invalid value for \"{{{paramName}}}\", must be one of #{allowable_values}")
+      end
+      {{/collectionFormat}}
+      {{^collectionFormat}}
       # verify enum value
       allowable_values = [{{#allowableValues}}{{#enumVars}}{{{value}}}{{^-last}}, {{/-last}}{{/enumVars}}{{/allowableValues}}]
       if @api_client.config.client_side_validation && !allowable_values.includes?({{{paramName}}})
         raise ArgumentError.new("invalid value for \"{{{paramName}}}\", must be one of #{allowable_values}")
       end
-      {{/isContainer}}
+      {{/collectionFormat}}
       {{/isEnum}}
       {{/required}}
       {{/isNullable}}
