--- a/crystal_client_templates/partial_model_generic.mustache
+++ b/crystal_client_templates/partial_model_generic.mustache
@@ -29,7 +29,7 @@
 {{#hasEnums}}
     class EnumAttributeValidator
       getter datatype : String
-      getter allowable_values : Array(String)
+      getter allowable_values : Array(String | Int32 | Float64)
 
       def initialize(datatype, allowable_values)
         @datatype = datatype
@@ -46,7 +46,7 @@
       end
 
       def valid?(value)
-        !value || allowable_values.includes?(value)
+        value.nil? || value.null? || allowable_values.includes?(value)
       end
     end
 
