--- a/crystal_client_templates/shard_name.mustache
+++ b/crystal_client_templates/shard_name.mustache
@@ -8,6 +8,7 @@ require "time"
 require "uri"
 
 # Project files
+require "./{{shardName}}/ext/**"
 require "./{{shardName}}/configuration.cr"
 require "./{{shardName}}/api_error.cr"
 require "./{{shardName}}/api_client.cr"
